--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -130,7 +130,7 @@ section {
     @apply absolute top-14 left-0 z-30 m-auto bg-slate-50 w-screen flex flex-col md:hidden max-w-6xl text-2xl font-bold;
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 919px) {
     .hello__nav__item__selected:after {
         @apply bg-primary-yellow;
         position: absolute;
@@ -144,7 +144,7 @@ section {
     
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 919px) {
     .hello__nav__wrapper:after {
         z-index: 40;
         background: linear-gradient(to right, #0073bc 0%, #0073bc 55%, #f9b000 55%,#f9b000 100%);
